--- a/uni.scss
+++ b/uni.scss
@@ -12,3 +12,4 @@
 $bk_color:#f2f2f2; //! 页面的灰度背景颜色
 $page_color:#fddf2f; //! 页面的主题颜色
 $black_color:#010001; //! 黑色按钮
+$gray_color:#b5b5b5; //! 可以用于描述等灰色按钮
